<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_small">

    <ImageView
        android:id="@+id/trackCoverImageView"
        android:layout_width="@dimen/track_cover_size"
        android:layout_height="@dimen/track_cover_size"
        android:contentDescription="@string/placeholder_description"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/margin_small"
        android:src="@drawable/cover_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trackTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_medium"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/track_title_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackCoverImageView"
        app:layout_constraintTop_toTopOf="@id/trackCoverImageView" />

    <TextView
        android:id="@+id/trackArtistTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/track_artist_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/trackTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/trackTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
